Changes in delete query params

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -74,7 +74,7 @@
                 <!--delete contact-->
 
                 <div class="delete-button">
-                    <a href="/delete-todo/?id=<%= i.id %>"></a>
+                    <a href="/delete-todo/?id=<%= i.id %>">
                     <i class="fas fa-window-close"></i>
                     </a>
                 </div>
